
  [ Dmitry Shachnev ]
  * New upstream release.
  * Update debian/watch for the new upstream tarballs naming scheme.
  * Bump Qt build-dependencies to 5.10.1.
  * Update Vcs fields for migration to salsa.debian.org.
  * Drop not needed libssl1.0-dev build-dependency (closes: #859673).
  * Add Qt_5.10 version tag to debian/libqt5websockets5.symbols.
  * Add support for nodoc build profile.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 19 Feb 2018 12:27:41 +0300

qtwebsockets-opensource-src (5.9.2-3) unstable; urgency=medium

  * Make the tests results not fatal also on mips64el.

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 28 Oct 2017 11:26:24 +0300

qtwebsockets-opensource-src (5.9.2-2) unstable; urgency=medium

  * Upload to unstable.

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 26 Oct 2017 16:54:18 +0300

qtwebsockets-opensource-src (5.9.2-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.9.2.
  * Use debhelper compat level 10 and dh_missing.
  * Bump Standards-Version to 4.1.1, no changes needed.

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 15 Oct 2017 18:59:26 +0300

qtwebsockets-opensource-src (5.9.1-3) unstable; urgency=medium

  * Release to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 16 Aug 2017 14:44:02 -0300

qtwebsockets-opensource-src (5.9.1-2) experimental; urgency=medium

  * Run the tests with --max-parallel=1 in hope it will reduce the
    number of test failures.
  * Temporarily ignore the tests results on armhf (not reproducible on
    porterbox) and mips (see #868745), to make the transition possible.

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 18 Jul 2017 11:27:35 +0300

qtwebsockets-opensource-src (5.9.1-1) experimental; urgency=medium

  * New upstream patch release.
  * Bump Qt build-dependencies to 5.9.1.
  * Run QML tests during build, drop disable_qml_tests.patch.
  * Bump Standards-Version to 4.0.0, no changes needed.
