@@ -8,7 +8,7 @@ Uploaders: Sune Vuorela <debian@pusling.com>,
            Timo Jyrinki <timo@debian.org>,
            Dmitry Shachnev <mitya57@debian.org>,
            Simon Quigley <tsimonq2@ubuntu.com>
-Build-Depends: debhelper (>= 10.3),
+Build-Depends: debhelper (>= 10.9.2~),
                pkg-kde-tools,
                qml-module-qtquick2,
                qml-module-qttest,
